--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -3,19 +3,19 @@
 
 <head>
     	<link rel="canonical" href="http://cgp2-a.com/paid-subscribe/" />
-	<title>付费好用机场订阅推荐，支持Clash/V2ray/Surge/VMESS等客户端和协议 - Clash Github官方机场站</title>
+	<title>付费好用机场订阅推荐，Clash(小猫咪)节点购买推荐，支持Clash/V2ray/Surge/VMESS等客户端和协议 - Clash Github官方机场站</title>
 	<!-- for-mobile-apps -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<link rel="icon" href="/assets/website/img/clashgithub/favicon.ico" type="image/x-icon"/>
-		<meta name="keywords" content="Shadowsocks 机场排名,Trojan机场排名,V2ray机场排名,中国国内好用的翻墙VPN推荐,付费机场排名,付费好用机场推荐,翻墙VPN排名" />
+		<meta name="keywords" content="购买Clash节点推荐,Trojan机场排名,V2ray机场排名,中国国内好用的翻墙VPN推荐,购买代理机场排名,付费好用机场推荐,购买翻墙VPN排名" />
 		<meta name="description" content="2025 按量付费机场哪个好？甄选了几个口碑不错的按量付费机场，多数为不限时长按量付费好用机场，少部分限时1年或2年 - Clash Github官方机场站" />
 	
     <meta name="author" content="Clash Github官方机场站">
     <meta property="og:type" content="webpage" />
     <meta property="og:url" content="http://cgp2-a.com/paid-subscribe/" />
     <meta property="og:site_name" content="Clash Github官方机场站" />
-    <meta property="og:title" content="付费好用机场订阅推荐，支持Clash/V2ray/Surge/VMESS等客户端和协议 - Clash Github官方机场站" />
+    <meta property="og:title" content="付费好用机场订阅推荐，Clash(小猫咪)节点购买推荐，支持Clash/V2ray/Surge/VMESS等客户端和协议 - Clash Github官方机场站" />
     <meta property="og:image" content="/assets/website/img/clashgithub/favicon.ico" />
         <meta property="og:description" content="2025 按量付费机场哪个好？甄选了几个口碑不错的按量付费机场，多数为不限时长按量付费好用机场，少部分限时1年或2年 - Clash Github官方机场站" />
     
@@ -26,7 +26,7 @@
     <meta name="robots" content="max-image-preview:large" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="付费好用机场订阅推荐，支持Clash/V2ray/Surge/VMESS等客户端和协议 - Clash Github官方机场站">
+    <meta name="apple-mobile-web-app-title" content="付费好用机场订阅推荐，Clash(小猫咪)节点购买推荐，支持Clash/V2ray/Surge/VMESS等客户端和协议 - Clash Github官方机场站">
     <meta name="format-detection" content="telephone=no">
 
     <link rel="dns-prefetch" href="https:/www.googletagmanager.com">
@@ -250,7 +250,7 @@
                             <hr />
                                                         <div class="panel panel-default">
                                 <div class="panel-heading">
-                                    <a href="javascript:;" class="js_to" data-url="https://129.153.56.218/#/register?code=" data-type="Xingchen" data-code="biwOBZBq" target="_blank"><b>星辰机场</b></a>
+                                    <a href="javascript:;" class="js_to" data-url="https://a.xcvpn.me/#/register?code=" data-type="Xingchen" data-code="biwOBZBq" target="_blank"><b>星辰机场</b></a>
                                 </div>
                                 <div class="panel-body">
                                     <p>【包年送2个月】</p><p>1、购买入门版年付套餐额外送2个月，共14个月，只要99元！！！</p><p>2、购买“至尊天皇”年付套餐，额外送2个月，只要299元！！！</p><p>3、购买其他包月类套餐中的年付，同样送2个月！！！</p><p>错过要再等一年！！</p>
@@ -320,7 +320,7 @@
                                                                             </dl>
                                 </div>
                                 <div class="panel-footer">
-                                    <a href="javascript:;" class="js_to" data-url="https://129.153.56.218/#/register?code=" data-type="Xingchen" data-code="biwOBZBq" target="_blank">点击查看</a>
+                                    <a href="javascript:;" class="js_to" data-url="https://a.xcvpn.me/#/register?code=" data-type="Xingchen" data-code="biwOBZBq" target="_blank">点击查看</a>
                                 </div>
                             </div>
                             <hr />
@@ -558,16 +558,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-5-4-clash-node.htm" title="5月4日→20.5M/S|2025年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址，便宜机场推荐">5月4日→20.5M/S|2025年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-23-free-node-subscribe.htm" title="5月23日→23M/S|2025年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址，便宜机场推荐">5月23日→23M/S|2025年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-6-free-high-speed-nodes.htm" title="5月6日→19.3M/S|2025年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐">5月6日→19.3M/S|2025年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-14-clash-node.htm" title="5月14日→22.2M/S|2025年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址，便宜机场推荐">5月14日→22.2M/S|2025年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-10-free-high-speed-nodes.htm" title="5月10日→19.4M/S|2025年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址，便宜机场推荐">5月10日→19.4M/S|2025年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-5-free-subscribe-node.htm" title="6月5日→22.2M/S|2025年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址，便宜机场推荐">6月5日→22.2M/S|2025年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-8-free-clash-subscribe.htm" title="5月8日→19.9M/S|2025年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址，便宜机场推荐">5月8日→19.9M/S|2025年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址，便宜机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-5-25-free-ssr-node.htm" title="5月25日→21.5M/S|2025年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址，便宜机场推荐">5月25日→21.5M/S|2025年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-9-free-node-subscribe-links.htm" title="6月9日→22.4M/S|2025年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址，便宜机场推荐">6月9日→22.4M/S|2025年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-22-free-node-subscribe.htm" title="5月22日→20.4M/S|2025年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址，便宜机场推荐">5月22日→20.4M/S|2025年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-17-clash-windows.htm" title="5月17日→20.2M/S|2025年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址，便宜机场推荐">5月17日→20.2M/S|2025年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-5-free-clash-subscribe.htm" title="5月5日→22.1M/S|2025年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址，便宜机场推荐">5月5日→22.1M/S|2025年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-23-free-node-subscribe.htm" title="5月23日→23M/S|2025年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址，便宜机场推荐">5月23日→23M/S|2025年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-31-shadowrocket-node.htm" title="5月31日→18.1M/S|2025年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐">5月31日→18.1M/S|2025年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-10-free-v2ray-subscribe.htm" title="6月10日→23M/S|2025年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址，便宜机场推荐">6月10日→23M/S|2025年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-28-shadowrocket-node.htm" title="5月28日→22.7M/S|2025年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址，便宜机场推荐">5月28日→22.7M/S|2025年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-12-shadowrocket-node.htm" title="6月12日→20.7M/S|2025年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址，便宜机场推荐">6月12日→20.7M/S|2025年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-4-clash-node.htm" title="6月4日→19.1M/S|2025年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址，便宜机场推荐">6月4日→19.1M/S|2025年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-15-free-node-subscribe.htm" title="5月15日→18.1M/S|2025年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐">5月15日→18.1M/S|2025年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -579,7 +579,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">9</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
+                <h4><span class="badge" style="float: right;">14</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">31</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
